--- a/changes
+++ b/changes
@@ -24,3 +24,5 @@ v1.0.5.2beta
   update restart script and uninstall script to also handle child processes
 v1.0.5.3beta
   add connection timout for socat
+v1.0.5.4beta
+  added fork to socat and seperated socat from the watchdog
